apps/example-app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-app
  labels:
    app.kubernetes.io/name: example-app
    app.kubernetes.io/part-of: example-app
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 5678
      protocol: TCP
  selector:
    app.kubernetes.io/name: example-app
    app.kubernetes.io/component: backend
